@@ -2,6 +2,7 @@ restauth-common 0.6.2 (XX XXXXX 2013)
 
   ContentHandlers
   * Implement the XMLContentHandler
+  * Add the Pickle3ContentHandler for Pickle protocol version 3.
   * The librarypath attribute may now refer to submodules
     (i.e. 'lxml.etree' instead of just 'lxml')
   * Update  documentation, add a few additional testcases
